<resources>
    <string name="app_name">mvpDemo</string>
    <string name="username_hint">请输入你的姓名</string>
    <string name="user_password_hint">请输入你的密码</string>
    <string name="username_tv">姓名</string>
    <string name="user_password_tv">密码</string>
    <string name="login_btn">登录</string>
    <string name="item_btn_con">按钮一</string>
    <string name="dwon_con">下载图片</string>
    <string name="header_img">头像</string>
</resources>