<?xml version="1.0" encoding="utf-8"?><androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    android:layout_width="match_parent"    android:layout_height="match_parent">    <androidx.constraintlayout.widget.Guideline        android:id="@+id/guideline2"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:orientation="vertical"        app:layout_constraintGuide_begin="100dp" />    <androidx.constraintlayout.widget.Guideline        android:id="@+id/guideline3"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:orientation="horizontal"        app:layout_constraintGuide_begin="80dp" />    <androidx.constraintlayout.widget.Guideline        android:id="@+id/guideline4"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:orientation="horizontal"        app:layout_constraintGuide_begin="160dp" />    <androidx.constraintlayout.widget.Guideline        android:id="@+id/guideline5"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:orientation="horizontal"        app:layout_constraintGuide_begin="260dp" />    <EditText        android:id="@+id/userName_edt"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:ems="10"        android:hint="@string/username_hint"        android:inputType="textPersonName"        android:textSize="16sp"        app:layout_constraintBottom_toTopOf="@+id/guideline3"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="@+id/guideline2"        app:layout_constraintTop_toTopOf="parent"        android:autofillHints="@string/username_hint" />    <EditText        android:id="@+id/password_edt"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:ems="10"        android:hint="@string/user_password_hint"        android:autofillHints="@string/user_password_hint"        android:inputType="textPassword"        android:textSize="16sp"        app:layout_constraintBottom_toTopOf="@+id/guideline4"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="@+id/guideline2"        app:layout_constraintTop_toTopOf="@+id/guideline3" />    <TextView        android:id="@+id/username_tv"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_marginEnd="24dp"        android:layout_marginBottom="30dp"        android:text="@string/username_tv"        app:layout_constraintBottom_toTopOf="@+id/guideline3"        app:layout_constraintEnd_toStartOf="@+id/guideline2" />    <TextView        android:id="@+id/password_tv"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_marginEnd="24dp"        android:layout_marginBottom="30dp"        android:text="@string/user_password_tv"        app:layout_constraintBottom_toTopOf="@+id/guideline4"        app:layout_constraintEnd_toStartOf="@+id/guideline2" />    <Button        android:id="@+id/login_btn"        android:layout_width="232dp"        android:layout_height="62dp"        android:text="@string/login_btn"        app:layout_constraintBottom_toTopOf="@+id/guideline5"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toTopOf="@+id/guideline4"        app:layout_constraintVertical_bias="0.511" /></androidx.constraintlayout.widget.ConstraintLayout>